# syslog-generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE_HANDOFF.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PLAN-v10.0.0.md  PLAN-v9.0.0.md  README.md  REVIEW.md  SECURITY.md  api-snapshot.txt  auth_schema.json  auth_schema.json.meta.json  codecov.yml  deny.toml  docker-compose.yml  docs-developer.md  docs-user.md  lcov.info  nginx_schema.json  nginx_schema.json.meta.json  profile.json  profile.json.meta.json  rust-toolchain.toml  templates.json  templates.json.meta.json
.archived-releases/: README.md
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.md  dependabot.yml
.github/workflows/: ci.yml  docker.yml  notify-telegram.yml  opencode.yml  perf-baseline.yml  perf-regression.yml  project-v2-sync.yml  release-pgo.yml  sbom.yml  sync-main-to-dev.yml  tls-stress-tests.yml
benches/: dispatch_matrix.rs  format_matrix.rs  hot_path.rs  message_generation.rs  runtime.rs  sender_throughput.rs  transport_matrix.rs
benches/format/: cef.rs  json_lines.rs  leef.rs
benches/transport/: file_rotation.rs  reconnect.rs  tls.rs
dashboards/: grafana.json
docker/: prometheus.yml  syslog-ng.conf
docs/: CLI_REFERENCE.md  COORDINATION.md  COVERAGE.md  DEVELOPER_GUIDE.md  FUZZING.md  MIGRATION.md  PERFORMANCE.md  PLAN-CI-FAILURE-MITIGATION.md  ROADMAP.md  TELEGRAM_SETUP.md  TESTING.md  USER_GUIDE.md  perf-baseline.md
examples/: README.md  cef_format.json  cipher_policy_tls13.json  cli_quickstart.md  connection_pool.json  file_rotation.yaml  file_sink.json  graceful_shutdown.json  json_lines_format.json  kafka_redpanda.yaml  leef_format.json  load_shape_burst.json  load_shape_burst.yaml  load_shape_ramp.json  load_shape_sine.json  load_steady_rate.json  metrics_and_tls.md  mtls_cipher_policy.json  multi_target_broadcast.json  multi_target_roundrobin.json  multi_target_roundrobin.yaml  multi_target_roundrobin.yml  multi_target_weighted.json  profile-docker.yaml  profile-f17-anomalies.yaml  protobuf_format.json  protobuf_message.json  protobuf_schema.json  reconnect_tcp.yaml  rfc3164_udp.json  rfc5424_tcp.json  rfc5424_tls_octet.json  schema_auth.json  schema_http_access.json  schema_nginx.json  single_target.json  templates_basic.json  variable_payload_schema.json  variable_payload_seeded.json
examples/templates/: templates_basic.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: format_cef.rs  format_json_lines.rs  format_leef.rs  format_rfc5424.rs  profile_parser.rs
schemas/: profile.schema.json
scripts/: check-advisory-expiry.sh  check-changelog.sh  check-n7-invariant.sh  check-toolchain.sh  compare-baseline.sh  coordinate.sh  perf-baseline.sh  pre-pr-check.sh  quality-gates.sh
src/: anomaly.rs  anomaly_proptests.rs  architecture-notes.md  cli.rs  config.rs  core.rs  error.rs  lib.rs  load_shape.rs  load_shape_proptests.rs  main.rs  metrics.rs  metrics_server.rs  payload.rs  payload_proptests.rs  protobuf.rs  schema.rs  schema_check.rs  sender.rs  shutdown.rs  syslog.rs  template.rs  validate.rs  validate_proptests.rs
src/cli/: preset.rs  set_override.rs
src/format/: cef.rs  json_lines.rs  leef.rs  mod.rs  protobuf.rs  raw.rs  rfc3164.rs  rfc5424.rs
src/generator/: config.rs  core.rs  mod.rs
src/observability/: metrics.rs  mod.rs  server.rs
src/plan/: mod.rs  schema.rs  template.rs  value.rs
src/transport/: file.rs  kafka.rs  mod.rs  reconnect.rs  tcp.rs  tls.rs  udp.rs
tests/: cli_integration.rs  integration_tests.rs  n7_runtime_errors.rs
