
[package]
name = "syslog-generator"
version = "10.7.3"
edition = "2021"
# v10.0.0: явный MSRV = 1.95.0 (минимальная версия rustc, на которой проект
# собирается и тестируется локально; CLAUDE_HANDOFF.md ссылается на 1.97, но
# фактически код собирается на stable 1.95).
rust-version = "1.95"

# v10.1.0 (Performance ч.1): LTO + codegen-units=1 для release profile.
# Улучшает throughput на 5-15% за счёт cross-module inlining.
# Увеличивает время компиляции release на ~30-50%, но release собирается
# один раз — приемлемо.
[profile.release]
lto = "fat"
codegen-units = 1

[features]
## F16 (v9.3.0): Kafka/Redpanda transport через pure-Rust клиент `rskafka`.
## Opt-in — НЕ включён по умолчанию (позволяет не тянуть зависимости
## пользователям, которым Kafka не нужен). Включение: `--features kafka`.
default = []
kafka = ["dep:rskafka"]

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
# v10.6.0: shell completions (bash, zsh, fish, powershell, elvish).
clap_complete = "4"
# v10.6.0: generate man page (subcommand `man`).
clap_mangen = "0.3"
# v10.6.0: colored output для ошибок (auto-detect NO_COLOR env).
owo-colors = { version = "4", features = ["supports-colors"] }
# v10.7.0: structured logging (tracing macros) + RUST_LOG поддержка.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# v10.7.1: progress bar — только при duration_secs > 30s И TTY.
indicatif = "0.18"
# Будет добавлен в v10.7.1 одновременно с имплементацией progress bar.
prometheus = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net", "io-util", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
# N4.cipher_policy (v9.5.0): миграция native-tls → rustls.
# Обоснование: native-tls использует SChannel (Windows) / Secure Transport
# (macOS) / OpenSSL (Linux); set_cipher_list доступен только через OpenSSL
# (Linux-only). rustls — pure Rust, кросс-платформенный, поддерживает
# явный выбор cipher_suites через ClientConfig::with_cipher_suites().
# Это **breaking change** в публичном API транспорта (см. CHANGELOG).
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12", "ring"] }
tokio-rustls = "0.26"
# v10.5.0: rustls-pemfile deprecated (RUSTSEC-2025-0134) → используем
# rustls-pki-types напрямую (PemObject trait). rustls-pki-types уже есть
# как transitive dep через rustls 0.23.
rustls-pki-types = { version = "1.15", features = ["std"] }
webpki-roots = "1.0"
governor = "0.10.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }
regex-syntax = "0.8"
jsonschema = "0.47"
bytes = "1"
## F16 (v9.3.0): pure-Rust Kafka/Redpanda client (опциональная зависимость).
## Поддерживает батчинг, сжатие (gzip/lz4/snappy/zstd), leader-recovery,
## backoff/retry внутри PartitionClient. По умолчанию все compression-варианты
## доступны (минимальные дополнительные крейты). Если пользователю нужен
## только один тип сжатия — он может собрать свой вариант фичи `kafka`
## через `rskafka = { ..., features = ["compression-snappy"] }` после
## форка проекта.
rskafka = { version = "0.6", optional = true, default-features = false, features = ["compression-gzip", "compression-lz4", "compression-snappy", "compression-zstd"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
regex = "1"
proptest = "1"
# F16 (v9.3.0): для integration-теста reconnect — RST через SO_LINGER=0.
# tokio::net::TcpStream::set_linger deprecated, поэтому используем
# socket2::Socket::set_linger напрямую.
socket2 = "0.6"

[[bench]]
name = "message_generation"
harness = false

[[bench]]
name = "sender_throughput"
harness = false
