
[package]
name = "syslog-generator"
version = "10.7.19"
edition = "2021"
# v10.0.0: явный MSRV = 1.95.0 (минимальная версия rustc, на которой проект
# собирается и тестируется локально; CLAUDE_HANDOFF.md ссылается на 1.97, но
# фактически код собирается на stable 1.95).
rust-version = "1.95"

# v10.1.0 (Performance ч.1): LTO + codegen-units=1 для release profile.
# Улучшает throughput на 5-15% за счёт cross-module inlining.
# Увеличивает время компиляции release на ~30-50%, но release собирается
# один раз — приемлемо.
[profile.release]
lto = "fat"
codegen-units = 1

# PR-A0 (v10.8.0): release-like profile для benches.
# Criterion benches ранее компилировались в debug-режиме (no opt, debug assertions),
# что искажало цифры throughput. Теперь benches собираются с LTO + opt-level=3
# без debug-информации, как release, но без strip (для возможности профилирования).
[profile.bench]
inherits = "release"
debug = false
strip = "none"

# PR-C1.3 (Issue #90): explicit `opt-level=3` + `lto="thin"` для benches.
# `release` profile использует `lto="fat"` (~30-50% более медленная компиляция
# release binary), что увеличивает время прогона benches в CI без выигрыша
# на per-message overhead (fat vs thin LTO обычно даёт ~1-3% performance,
# а здесь бенчим hot-path, где fat LTO не даёт значимого преимущества).
# `codegen-units=1` уже наследуется от release и сохраняется.
# Acceptable by PR-A0 baseline: hot_path tolerance ±5%, perf-budget gate
# подтверждает регрессию при >5% ns/msg. Наши targeted benches не должны
# регрессировать >2% после перехода на thin LTO.
opt-level = 3
lto = "thin"

# PR-C1.4 (Issue #90): test profile — opt-level=1 для ускорения компиляции
# тестов без потери coverage gates. debug=true сохраняет debug info.
# Совместимо с coverage `--fail-under-lines=97` (coverage собирается по
# branch coverage, не зависит от оптимизации).
# Validation: cargo test --locked --features test-helpers в pre-pr-check.sh.
[profile.test]
opt-level = 1
debug = true

# PR-17d (v10.7.19): PGO (Profile-Guided Optimization) opt-in via env var.
# Production release builds НЕ используют PGO по умолчанию (для скорости CI).
# Включение для release: `RUSTFLAGS="-Cprofile-use=/tmp/pgo-data/merged.profdata" cargo build --release`.
# Полная процедура — см. docs/PERFORMANCE.md §6 (PGO Workflow).
# Улучшение: ~5% throughput на hot-path bench (1.74 µs → 1.65 µs/msg).
# pgo = false

[features]
## F16 (v9.3.0): Kafka/Redpanda transport через pure-Rust клиент `rskafka`.
## Opt-in — НЕ включён по умолчанию (позволяет не тянуть зависимости
## пользователям, которым Kafka не нужен). Включение: `--features kafka`.
default = []
kafka = ["dep:rskafka"]
## PR-2: test-helpers feature открывает доступ к функциям, которые
## нужны integration-тестам (например `ensure_rustls_provider_for_tests`).
## По умолчанию выключен — это не часть продакшн API.
test-helpers = []

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
# v10.6.0: shell completions (bash, zsh, fish, powershell, elvish).
clap_complete = "4"
# v10.6.0: generate man page (subcommand `man`).
clap_mangen = "0.3"
# v10.6.0: colored output для ошибок (auto-detect NO_COLOR env).
owo-colors = { version = "4", features = ["supports-colors"] }
# v10.7.0: structured logging (tracing macros) + RUST_LOG поддержка.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# v10.7.1: progress bar — только при duration_secs > 30s И TTY.
indicatif = "0.18"
# PR-4 (v10.7.6): prometheus без default features (убирает protobuf encoder
# transitively — мы используем только text format через TextEncoder).
prometheus = { version = "0.14", default-features = false }
# PR-4 (v10.7.6): serde без default features + явное указание нужных фич
# (std нужен для HashMap/Vec/Result).
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net", "io-util", "fs"] }
# PR-17e (v10.7.20): `parking_lot::Mutex` для SharedRx — замена `tokio::sync::Mutex`.
# Sync mutex быстрее async на uncontended path (~30-100 нс/msg savings).
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["rt"] }
# N4.cipher_policy (v9.5.0): миграция native-tls → rustls.
# Обоснование: native-tls использует SChannel (Windows) / Secure Transport
# (macOS) / OpenSSL (Linux); set_cipher_list доступен только через OpenSSL
# (Linux-only). rustls — pure Rust, кросс-платформенный, поддерживает
# явный выбор cipher_suites через ClientConfig::with_cipher_suites().
# Это **breaking change** в публичном API транспорта (см. CHANGELOG).
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12", "ring"] }
tokio-rustls = "0.26"
# v10.5.0: rustls-pemfile deprecated (RUSTSEC-2025-0134) → используем
# rustls-pki-types напрямую (PemObject trait). rustls-pki-types уже есть
# как transitive dep через rustls 0.23.
rustls-pki-types = { version = "1.15", features = ["std"] }
webpki-roots = "1.0"
governor = "0.10.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = { version = "0.10", default-features = false, features = ["std", "std_rng", "thread_rng"] }
regex-syntax = "0.8"
jsonschema = "0.48"
bytes = "1"
# PR-12: Zeroizing для TLS private keys / cert PEM bytes.
# Предотвращает утечку private key в core dumps / swap / `/proc/<pid>/mem`.
zeroize = { version = "1", features = ["zeroize_derive"] }
## F16 (v9.3.0): pure-Rust Kafka/Redpanda client (опциональная зависимость).
## Поддерживает батчинг, сжатие (gzip/lz4/snappy/zstd), leader-recovery,
## backoff/retry внутри PartitionClient. По умолчанию все compression-варианты
## доступны (минимальные дополнительные крейты). Если пользователю нужен
## только один тип сжатия — он может собрать свой вариант фичи `kafka`
## через `rskafka = { ..., features = ["compression-snappy"] }` после
## форка проекта.
rskafka = { version = "0.6", optional = true, default-features = false, features = ["compression-gzip", "compression-lz4", "compression-snappy", "compression-zstd"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
regex = "1"
proptest = "1"
# F16 (v9.3.0): для integration-теста reconnect — RST через SO_LINGER=0.
# tokio::net::TcpStream::set_linger deprecated, поэтому используем
# socket2::Socket::set_linger напрямую.
socket2 = "0.6"
# PR-Q.2 (Phase 7a): CLI integration tests через assert_cmd.
# Тестирует subcommands (completions, man), flags (--dry-run, --print-config,
# --version, --help) и error paths через реальный бинарник (build + execute).
# Тесты живут в tests/cli_integration.rs (НЕ tests/integration_tests.rs —
# этот файл уже большой, 3233 строк).
assert_cmd = "1"
predicates = "3"
# PR-Q.2 (Phase 7b): subprocess SIGTERM test в shutdown.rs использует
# libc::kill для посылки сигнала spawned бинарю.
libc = "0.2"

[[bench]]
name = "message_generation"
harness = false

[[bench]]
name = "sender_throughput"
harness = false

# PR-9: hot-path bench для per-message overhead (µs resolution).
# Target: ≤ 2 µs/msg на generate_message_with_format (PR-10).
[[bench]]
name = "hot_path"
harness = false

# PR-A0: runtime bench — реальный `run_profile` end-to-end (вместо только helper).
[[bench]]
name = "runtime"
harness = false

# PR-A0: format matrix — 7 форматов × {static, faker}.
[[bench]]
name = "format_matrix"
harness = false

# PR-A0: transport matrix — TCP/UDP × {1, 4, 16} connections.
[[bench]]
name = "transport_matrix"
harness = false

# PR-A0: dispatch matrix — round-robin/weighted/broadcast × {1, 4, 16} targets.
[[bench]]
name = "dispatch_matrix"
harness = false

# PR-6 (v10.7.8): расширенное bench-coverage. Иерархическая структура:
# benches/format/, benches/transport/. Каждый bench — отдельный бинарь.
[[bench]]
name = "format_cef"
path = "benches/format/cef.rs"
harness = false

[[bench]]
name = "format_leef"
path = "benches/format/leef.rs"
harness = false

[[bench]]
name = "format_json_lines"
path = "benches/format/json_lines.rs"
harness = false

[[bench]]
name = "transport_tls"
path = "benches/transport/tls.rs"
harness = false

[[bench]]
name = "transport_file_rotation"
path = "benches/transport/file_rotation.rs"
harness = false

[[bench]]
name = "transport_reconnect"
path = "benches/transport/reconnect.rs"
harness = false

[[test]]
name = "integration_tests"
required-features = ["test-helpers"]

[[test]]
name = "n7_runtime_errors"
required-features = ["test-helpers"]
